--- a/agent/package.json
+++ b/agent/package.json
@@ -22,6 +22,7 @@
         "@elizaos/adapter-redis": "workspace:*",
         "@elizaos/adapter-sqlite": "workspace:*",
         "@elizaos/client-auto": "workspace:*",
+        "@elizaos/client-ao": "workspace:*",
         "@elizaos/client-direct": "workspace:*",
         "@elizaos/client-discord": "workspace:*",
         "@elizaos/client-farcaster": "workspace:*",
