--- a/packages/client-ao/package.json
+++ b/packages/client-ao/package.json
@@ -20,6 +20,7 @@
     ],
     "dependencies": {
         "@elizaos/core": "workspace:*",
+        "@permaweb/aoconnect": "^0.0.62",
         "agent-twitter-client": "0.0.18",
         "glob": "11.0.0",
         "zod": "3.23.8"
