plugin ao - clara sdk version update

--- a/agent/package.json
+++ b/agent/package.json
@@ -33,6 +33,7 @@
         "@elizaos/core": "workspace:*",
         "@elizaos/plugin-0g": "workspace:*",
         "@elizaos/plugin-abstract": "workspace:*",
+        "@elizaos/plugin-ao": "workspace:*",
         "@elizaos/plugin-aptos": "workspace:*",
         "@elizaos/plugin-bootstrap": "workspace:*",
         "@elizaos/plugin-intiface": "workspace:*",
