--- a/.env.example
+++ b/.env.example
@@ -242,6 +242,13 @@ SMALL_REDPILL_MODEL=  # Default: gpt-4o-mini
 MEDIUM_REDPILL_MODEL= # Default: gpt-4o
 LARGE_REDPILL_MODEL=  # Default: gpt-4o
 
+# AO the computer
+AO_WALLET=
+AO_MARKET_ID=
+AO_ACTION_INTERVAL=
+AO_USERNAME=
+AO_WALLET_ID=
+
 # Grok Configuration
 GROK_API_KEY=         # GROK/xAI API Key
 SMALL_GROK_MODEL=     # Default: grok-2-1212
