--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "devDependencies": {
         "@commitlint/cli": "18.6.1",
         "@commitlint/config-conventional": "18.6.3",
+        "@permaweb/aoconnect": "^0.0.62",
         "@typescript-eslint/eslint-plugin": "8.16.0",
         "@typescript-eslint/parser": "8.16.0",
         "@vitest/eslint-plugin": "1.1.13",
@@ -41,9 +42,9 @@
         "turbo": "2.3.3",
         "typedoc": "0.26.11",
         "typescript": "5.6.3",
+        "viem": "2.21.58",
         "vite": "5.4.11",
-        "vitest": "2.1.5",
-        "viem": "2.21.58"
+        "vitest": "2.1.5"
     },
     "pnpm": {
         "overrides": {
