--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "18.6.1",
     "@commitlint/config-conventional": "18.6.3",
+    "@permaweb/aoconnect": "^0.0.62",
     "@types/jest": "^29.5.11",
     "concurrently": "9.1.0",
     "cross-env": "7.0.3",
