clara protocol: clara on story

--- a/.env.example
+++ b/.env.example
@@ -242,17 +242,19 @@ SMALL_REDPILL_MODEL=  # Default: gpt-4o-mini
 MEDIUM_REDPILL_MODEL= # Default: gpt-4o
 LARGE_REDPILL_MODEL=  # Default: gpt-4o
 
-# AO the computer
+# C.L.A.R.A protocol
+# AO config
 AO_WALLET=
 AO_MARKET_ID=
 AO_USERNAME=
 AO_WALLET_ID=
 
-# Story Protocol
-STORY_WALLET=
-STORY_USERNAME=
-STORY_WALLET_ID=
-STORY_MARKET_ID=
+# Story Protocol configuration
+CLARA_STORY_USERNAME=
+CLARA_STORY_WALLET=
+CLARA_STORY_WALLET_ID=
+CLARA_STORY_AO_MARKET_ID=
+
 
 # Grok Configuration
 GROK_API_KEY=         # GROK/xAI API Key
