--- a/packages/plugin-ao/package.json
+++ b/packages/plugin-ao/package.json
@@ -20,7 +20,7 @@
     ],
     "dependencies": {
         "@elizaos/core": "workspace:*",
-        "redstone-clara-sdk": "^0.0.21",
+        "redstone-clara-sdk": "^0.0.22",
         "@permaweb/aoconnect": "^0.0.62",
         "node-cache": "5.1.2",
         "tsup": "8.3.5",
@@ -28,6 +28,7 @@
     },
     "scripts": {
         "build": "tsup --format esm --dts",
+        "dev": "tsup --format esm --dts --watch",
         "lint": "eslint . --fix"
     },
     "peerDependencies": {
