clara client: story

--- a/.env.example
+++ b/.env.example
@@ -248,6 +248,12 @@ AO_MARKET_ID=
 AO_USERNAME=
 AO_WALLET_ID=
 
+# Story Protocol
+STORY_WALLET=
+STORY_USERNAME=
+STORY_WALLET_ID=
+STORY_MARKET_ID=
+
 # Grok Configuration
 GROK_API_KEY=         # GROK/xAI API Key
 SMALL_GROK_MODEL=     # Default: grok-2-1212
