--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/cli": "18.6.1",
     "@commitlint/config-conventional": "18.6.3",
     "@permaweb/aoconnect": "^0.0.62",
+    "@story-protocol/core-sdk": "1.2.0-rc.3",
     "@types/jest": "^29.5.11",
     "concurrently": "9.1.0",
     "cross-env": "7.0.3",
