--- a/packages/client-clara/package.json
+++ b/packages/client-clara/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elizaos/client-ao",
+    "name": "@elizaos/client-clara",
     "version": "0.1.7",
     "type": "module",
     "main": "dist/index.js",
@@ -22,11 +22,13 @@
         "@elizaos/core": "workspace:*",
         "@permaweb/aoconnect": "^0.0.62",
         "glob": "11.0.0",
-        "redstone-clara-sdk": "^0.0.21",
+        "redstone-clara-sdk": "^0.0.23",
         "zod": "3.23.8"
     },
     "devDependencies": {
-        "tsup": "8.3.5"
+        "tsup": "8.3.5",
+        "@story-protocol/core-sdk": "1.2.0-rc.3",
+        "viem": "2.21.58"
     },
     "scripts": {
         "build": "tsup --format esm --dts",
