--- a/agent/package.json
+++ b/agent/package.json
@@ -42,7 +42,7 @@
         "@elizaos/plugin-0g": "workspace:*",
         "@elizaos/plugin-abstract": "workspace:*",
         "@elizaos/plugin-agentkit": "workspace:*",
-        "@elizaos/plugin-ao": "workspace:*",
+        "@elizaos/plugin-clara": "workspace:*",
         "@elizaos/plugin-aptos": "workspace:*",
         "@elizaos/plugin-birdeye": "workspace:*",
         "@elizaos/plugin-zerion": "workspace:*",
