--- a/packages/plugin-clara/package.json
+++ b/packages/plugin-clara/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elizaos/plugin-ao",
+    "name": "@elizaos/plugin-clara",
     "version": "0.1.7",
     "type": "module",
     "main": "dist/index.js",
@@ -20,7 +20,7 @@
     ],
     "dependencies": {
         "@elizaos/core": "workspace:*",
-        "redstone-clara-sdk": "^0.0.22",
+        "redstone-clara-sdk": "^0.0.25",
         "@permaweb/aoconnect": "^0.0.62",
         "node-cache": "5.1.2",
         "tsup": "8.3.5",
