clara protocol: env renames

--- a/.env.example
+++ b/.env.example
@@ -244,10 +244,10 @@ LARGE_REDPILL_MODEL=  # Default: gpt-4o
 
 # C.L.A.R.A protocol
 # AO config
-AO_WALLET=
-AO_MARKET_ID=
-AO_USERNAME=
-AO_WALLET_ID=
+CLARA_AO_USERNAME=
+CLARA_AO_WALLET=
+CLARA_AO_WALLET_ID=
+CLARA_AO_MARKET_ID=
 
 # Story Protocol configuration
 CLARA_STORY_USERNAME=
