clara protocol: enable plugin by env

--- a/.env.example
+++ b/.env.example
@@ -250,6 +250,7 @@ CLARA_AO_WALLET_ID=
 CLARA_AO_MARKET_ID=
 
 # Story Protocol configuration
+ENABLE_CLARA_PROTOCOL_PLUGIN=false
 CLARA_STORY_USERNAME=
 CLARA_STORY_WALLET=
 CLARA_STORY_WALLET_ID=
