clara sdk upgrade 0.1.1

--- a/.env.example
+++ b/.env.example
@@ -251,10 +251,11 @@ CLARA_AO_MARKET_ID=
 
 # Story Protocol configuration
 ENABLE_CLARA_PROTOCOL_PLUGIN=false
+CLARA_STORY_PRIVATE_KEY=
+CLARA_STORY_ACCOUNT=
 CLARA_STORY_USERNAME=
-CLARA_STORY_WALLET=
-CLARA_STORY_WALLET_ID=
-CLARA_STORY_AO_MARKET_ID=
+CLARA_STORY_MARKET_ID=
+CLARA_STORY_CHAIN= # 'mainnet' | 'aeneid'
 
 
 # Grok Configuration
