docs: clara client

--- a/.env.example
+++ b/.env.example
@@ -257,6 +257,7 @@ CLARA_STORY_ACCOUNT=
 CLARA_STORY_USERNAME=
 CLARA_STORY_MARKET_ID=
 CLARA_STORY_CHAIN= # 'mainnet' | 'aeneid'
+CLARA_STORY_FEE= # '0.01'
 
 
 # Grok Configuration
