--- a/.env.example
+++ b/.env.example
@@ -253,9 +253,8 @@ CLARA_AO_MARKET_ID=
 
 # Story Protocol configuration
 CLARA_STORY_PRIVATE_KEY=
-CLARA_STORY_ACCOUNT=
 CLARA_STORY_USERNAME=
-CLARA_STORY_MARKET_ID=
+CLARA_STORY_MARKET_CONTRACT_ADDRESS=
 CLARA_STORY_CHAIN= # 'mainnet' | 'aeneid'
 CLARA_STORY_FEE= # '0.01'
 
